final fix for overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,11 +3,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @layer base {
     html, body {
         font-family: 'Roboto', sans-serif !important;
-        width: 100vw !important;
-        overflow-x: hidden !important;
     }
   }
